Updates im Verlauf des Seminars

--- a/Labs/02_VoucherTable/src/app/app.component.html
+++ b/Labs/02_VoucherTable/src/app/app.component.html
@@ -1,3 +1,16 @@
-<div>Insert Navigation here</div>
+<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+<div>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea beatae vero
+  voluptatum eligendi praesentium officia. Facere sequi similique nam veniam, ab
+  ex qui, officiis enim amet, numquam consequatur delectus eaque!
+
+  <app-vouchers-table></app-vouchers-table>
+
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur alias,
+  explicabo assumenda, voluptate velit aliquam tempore sint molestias sapiente
+  laborum aut dolorum voluptatem optio quaerat vero adipisci. Officia, quas
+  harum.
+</div>
+
+<app-footer></app-footer>
